my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENTYPE/ENTYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTYPE.dml:19:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENTYPE.dml:21:19: error ENTYPE: unknown type of expression
